manifests/taskapp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskapp
  labels:
    app.kubernetes.io/name: taskapp
    app.kubernetes.io/part-of: taskapp
