manifests/taskapp/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: taskapp
  labels:
    app: postgres
spec:
  clusterIP: None
  ports:
    - port: 5432
      name: postgres
      protocol: TCP
  selector:
    app: postgres
